--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
 #sub-main h1{
     vertical-align: middle;
 }
-
+/*------------------------------------style title bar-----------------------------------*/
 #title-bar{
     position: relative;
     display: flex;
@@ -50,7 +50,7 @@ body{
 #title{
     font-size: 35pt;
 }
-
+/*------------------------------------style for nav bar-----------------------------------*/
 #nav-bar{
     position: relative;
     width: 900px;
@@ -86,12 +86,15 @@ body{
     background-color: #d1661a;
 }
 
+
+
+/*------------------------------------style for content bar-----------------------------------*/
 #content-bar{
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 #content{
@@ -100,21 +103,50 @@ body{
     justify-content: space-between;
 }
 
+#description{
+    background-color: ghostwhite;
+    width: 570px;
+    height: 500px;
+}
+
+#image-slider{
+    width: 100%;
+    height: 75%;
+}
+
+#image-slider img{
+    width: 570px;
+    height: 375px;
+}
+
+#bio{
+    width: 100%;
+    height: 25%;
+    padding: 5px;
+    font-family: Lato, Roboto;
+    font-size: 12pt;
+}
 
 #side-bar{
-    border: 2px solid rgb(160, 51, 145);
-    width: 320px;
-    height: 480px;
+    /* border: 2px solid rgb(160, 51, 145); */
+    width: 330px;
+    height: 500px;
 }
 
-#description{
-    border: 2px solid rgb(160, 51, 145);
-    width: 570px;
-    height: 480px;
+#notice{
+    margin: 2px;
+    background-color: ghostwhite;
+    height: 248px;
+}
+
+#links{
+    margin: 2px;
+    background-color: ghostwhite;
+    height: 248px;
 }
 
 
-
+/*------------------------------------style for footer bar-----------------------------------*/
 #footer-bar{
     margin-top: 10px;
    
@@ -130,5 +162,24 @@ body{
     text-align: center;
     left: 0;
     bottom: 0;
-    justify-self: center;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+/*------variable style------------*/
+
+.sec-title{
+    height: 25px;
+    font-family: Roboto;
+    font-size: 15pt;
+    color: ghostwhite;
+    background-color: #00778f;
+    display: block;
+    text-align: center;
+    /* padding: 9px 11px; */
+    padding-top: 3px;
+    margin: auto;
+    text-decoration: none;
 }
