--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
     font-family: Lato;
     src: url(fonts/Lato/Lato-Regular.ttf);
 }
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: #e6ecef;
 }
@@ -119,12 +125,21 @@ body{
     height: 375px;
 }
 
+.animate img {
+    transition: opacity 1s ease-in-out;
+}
+
 #bio{
     width: 100%;
     height: 25%;
-    padding: 5px;
+    padding: 1.5%;
     font-family: Lato, Roboto;
     font-size: 12pt;
+    text-align: justify;
+}
+
+#bio p{
+    width: 97%;
 }
 
 #side-bar{
@@ -171,7 +186,7 @@ body{
 /*------variable style------------*/
 
 .sec-title{
-    height: 25px;
+    height: 28px;
     font-family: Roboto;
     font-size: 15pt;
     color: ghostwhite;
@@ -183,3 +198,7 @@ body{
     margin: auto;
     text-decoration: none;
 }
+
+
+
+/* -------animation---------- */
