--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
 /*------------------------------------style for nav bar-----------------------------------*/
 #nav-bar{
     position: relative;
-    width: 900px;
+    width: 1000px;
     bottom: -30px;
     font-size: 14pt;
     font-weight: 500;
@@ -100,18 +100,18 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 25px;
+    margin: 30px 0px;
 }
 
 #content{
-    width: 900px;
+    width: 1000px;
     display: flex;
     justify-content: space-between;
 }
 
 #description{
     background-color: ghostwhite;
-    width: 570px;
+    width: 700px;
     height: 500px;
 }
 
@@ -121,7 +121,7 @@ body{
 }
 
 #image-slider img{
-    width: 570px;
+    width: 700px;
     height: 375px;
 }
 
@@ -144,7 +144,7 @@ body{
 
 #side-bar{
     /* border: 2px solid rgb(160, 51, 145); */
-    width: 330px;
+    width: 300px;
     height: 500px;
 }
 
@@ -163,15 +163,53 @@ body{
 
 /*------------------------------------style for footer bar-----------------------------------*/
 #footer-bar{
-    margin-top: 10px;
-   
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #00778f;
 }
 
+footer{
+    width: 1000px;
+    height: 150px;
+}
+
+#footer-element{
+    display: flex;
+    justify-content: space-between;
+}
+
+#company-profile{
+    width: 350px;
+    height: 150px;
+    text-align: justify;
+}
+#company-profile h2{
+    font-size: 15pt;
+}
+
+#services{
+    width: 300px;
+}
+
+#contact{
+    width: 350px;
+}
+
+
 #credit{
+    position: absolute;
     background-color: #075573;
     width: 100%;
     height: 20px;
     font-size: 10pt;
+    margin-top: 10px;
     font-family: Ubuntu;
     color: white;
     text-align: center;
@@ -202,3 +240,4 @@ body{
 
 
 /* -------animation---------- */
+
